--- a/lekcii/mathanalys.tex
+++ b/lekcii/mathanalys.tex
@@ -341,6 +341,48 @@ $(x-y)$ - евклидово расстояние.
     \item $\sup_{||x||<=}||Lx||$.
 \end{itemize}
 
+\section{Лекция 4.}
 
+Продолжаем с операторами, пусть $A: \RR^n\rightarrow \RR^n$ - линейный, $||A||=\sup_{||x||\leq 1}||Ax||$ - норма, где $||x||$ - Евклидово. $A\cong \RR^{nm}$, так как можно выносить константу, не меньше нуля (притом равна тогда и только тогда, когда сам оператор - нуль), а также, норма суммы не превосходит сумму норм. 
+
+\begin{defn}
+    $||A||$ - \textit{операторная норма}, притом супремум всегда достигается. 
+\end{defn}
+
+Операторная норма есть самое большое по модулю собственное число. Предположим, что у $A$ есть $n$ различных $\lambda_i$ собственных чисел, у которых есть соответственные $x^i$ собственные векторы. Запишем тогда $x=\sum_{k=1}^n a_kx^k$, $Ax=\sum_{k=1}^n \lambda_k a_kx^k$, тогда $||Ax||\leq\max_k|\lambda_k|\cdot||x||$, но это мы объяснить не смогли. \ 
+
+Однако разговор сейчас шёл о различных собственных числах, бывают же \textit{кратные} собственные числа. Что происходит? \ 
+
+Важный момент, почему важна операторная норма. Пусть $A:\RR^n\rightarrow \RR^m$, $B:\RR^m\rightarrow \RR^k$, тогда $||BA||\leq ||B||\cdot||A||$, так как левая часть по определению равна $\sup_{||x||\leq 1 (в \RR^n)}\leq \sup_{||y||\leq||A||}||By||\leq ||B||\cdot||A||$. Заметим также две следующие вещи для линейного $A:\RR^n\rightarrow \RR^m$ равносильны: \ 
+
+\begin{itemize}
+    \item $\ker A=\{0\}$
+    \item $||Ax||\geq \varepsilon ||x||, \exists \varepsilon >0$. 
+\end{itemize}
+
+\begin{proof}
+    $\{x:||x||=1\}$ - единичная сфера в $\RR^n$. Пусть $f(x):x\rightarrow ||Ax||$, $f$ - непрерывная (?), $f\neq 0$ на единичной сфере, тогда $f\geq \varepsilon >0$, $||Ax||\geq \varepsilon||x||$, $||x||=1$. 
+\end{proof}
+
+Вообще, нам все эти операторы нужны для рассуждений о гладкости, сформулируем теорему: \\ 
+
+\begin{theorem}
+    $f: G\rightarrow \RR^m$, $G\subset \RR^n$ - открытое, $f$ - гладкая в окрестности $x^0$ (верхние индексы), $y^0=f(x^0)$, $g:V_{f(x^0)}\rightarrow \RR^k$, гладкая в $f(x^0)$, для $f$ и $g$ существуют линейные операторы $A$ ($x_00)$ и $B$ ($f(x_0)$). Тогда $g(f(x))$ - гладкое (?) отображение в $x_0$ с линейным оператором (?) $BA:\RR^n\rightarrow \RR^k$. 
+\end{theorem}
+
+\begin{proof}
+    Мы знаем, что существует представление $f(x)=f(x^0)+A(x-x^0)+o(||x-x^0||)$. Применим $g$, получим 
+    \begin{equation}
+        g(f(x))=g(y^0+A(x-x^0)+o(||x-x^0||)).
+    \end{equation}
+        
+    Также мы знаем, что $g$ гладкая, то есть, также представима в виде $g(y)=g(y^0)+B(y-y^0)+o(||y-y^0)$, тогда приняв аргумент правой части $(1)$ за $y$, получим продолжение тождества: 
+    \begin{equation}
+        \begin{split}
+            g(y^0)+B(A(x-x^0)+o(||x-x^0||))+o(A(x-x^0)+o(||x-x^0||)) = \\ 
+            g(y^0)+BA(x-x^0)+o(||x-x^0||).
+        \end{split}
+\end{equation}
+\end{proof}
 
 \end{document}
